--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0",
     "run-sequence": "^1.2.1"
