--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "freelancer",
-  "title": "Freelancer",
-  "version": "1.0",
-  "homepage": "",
-  "author": "Start Bootstrap",
-  "license": {
-    "type": "MIT",
-    "url": ""
-  },
+  "name": "bootstrap-gulp",
+  "version": "1.0.0",
+  "description": "## Getting Started",
+  "main": "gulpfile.js",
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "del": "^2.2.0",
@@ -21,8 +17,18 @@
     "gulp-useref": "^3.1.0",
     "run-sequence": "^1.2.1"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": ""
-  }
+    "url": "git+https://github.com/mkoller/bootstrap-gulp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mkoller/bootstrap-gulp/issues"
+  },
+  "homepage": "https://github.com/mkoller/bootstrap-gulp#readme"
 }
